# gb-notes

./: .gitattributes  .gitignore  README.md
backend/: README.md  notes.db
backend/gb-notes-api-server/: Cargo.toml
backend/gb-notes-api-server/src/: main.rs
backend/gb-notes-api-server/src/handlers/: new_note_handler.rs
backend/gb-notes-api-server/src/models/: database.rs  note.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Layout.tsx  Navbar.css  Navbar.tsx
frontend/src/pages/: About.tsx  Account.tsx  Home.tsx  NewNote.css  NewNote.tsx  Notes.css  Notes.tsx
