[package]
name = "gb-notes-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = "0.6.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
